# target-xero-v3

./: .gitignore  README.md  meltano.yml  pyproject.toml
.github/workflows/: ci-unit-tests.yml
sample_payload/: data.singer
target_xero_v3/: base_sinks.py  client.py  mapping.py  mapping_xero.json  sinks.py  target.py
target_xero_v3/mappers/: base_mapper.py  customer_schema_mapper.py  vendor_schema_mapper.py
target_xero_v3/sinks/: customer_sink.py  vendor_sink.py
target_xero_v3/tests/: __init__.py  conftest.py  test_base_sinks.py  test_client.py  test_core.py  test_customer_schema_mapper.py  test_vendor_schema_mapper.py
target_xero_v3/tests/fixtures/: mappers.py
