[tool.poetry]
name = "target-xero-v3"
version = "0.0.4"
description = "`target-xero-v3` is a Singer target for Xero, built with the Hotglue Singer SDK."
authors = ["Adil Ahmed"]
keywords = [
    "ELT",
    "Xero",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
hotglue-singer-sdk = "~=1.0.34"
hotglue-models-accounting = { git = "https://gitlab.com/hotglue/hotglue-models-accounting.git", rev = "v2" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "target_xero_v3"

[build-system]
requires = ["poetry-core==1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-xero-v3 = 'target_xero_v3.target:TargetXero.cli'
target-xero = 'target_xero_v3.target:TargetXero.cli'